--- a/src/blocks/ArticlesDashboard/articles-dashboard.scss
+++ b/src/blocks/ArticlesDashboard/articles-dashboard.scss
@@ -3,6 +3,8 @@
 .articles-dashboard {
   text-align: left;
   padding-bottom: $spacing_0_8;
+  background-color: #eaf7f9;
+  padding-bottom: $spacing_4_2;
 
   &__headings-item {
     padding: $spacing_4_0 0 0 $spacing_6_0;
@@ -22,6 +24,7 @@
     min-width: 0;
     overflow: hidden;
     width: 100%;
+    padding-bottom: $spacing_3_2;
   }
 
   &__categories-item {
@@ -46,6 +49,20 @@
 
   &__article-item {
     margin-top: $spacing_1_6;
+
+    &__card-media {
+      &.card-media {
+        background-color: #ffffff;
+
+        .theme-light & {
+          background-color: #ffffff;
+        }
+
+        .theme-dark & {
+          background-color: #0e202f;
+        }
+      }
+    }
   }
 
   &__heading-item {
@@ -60,5 +77,10 @@
     color: $color_secondary_9749fa;
     cursor: pointer;
     padding: $spacing_1_6 0;
+  }
+
+  &__show-more-button {
+    margin-top: $spacing_3_2;
+    margin-inline: auto;
   }
 }
