--- a/src/blocks/ContactUs/contact-us.scss
+++ b/src/blocks/ContactUs/contact-us.scss
@@ -13,28 +13,24 @@
   }
 
   &__grid {
-    place-items: center;
     text-align: left;
     padding-top: $spacing_3_2;
+    gap: $spacing_1_8;
 
     @media screen and (min-width: $screen-md) {
       padding-top: $spacing_5_0;
     }
     @media screen and (min-width: $screen-lg) {
-      padding-top: $spacing_8_0;
+      padding-top: $spacing_4_0;
+      max-width: 58.4rem;
     }
 
-    &__textarea-item {
-      padding-top: $spacing_3_0;
-    }
+    &__button-item {
+      display: flex;
+      width: 100%;
 
-    &__button {
-      margin-top: $spacing_3_2;
-      @media screen and (min-width: $screen-md) {
-        margin-top: $spacing_5_0;
-      }
-      @media screen and (min-width: $screen-lg) {
-        margin-top: $spacing_8_0;
+      & > .button {
+        width: 100%;
       }
     }
   }
