--- a/src/blocks/MoodTrackHistory/mood-track-history.scss
+++ b/src/blocks/MoodTrackHistory/mood-track-history.scss
@@ -1,6 +1,8 @@
 @import "@USupport-components-library/styles";
 
 .mood-track-history {
+  padding-bottom: $spacing_3_2;
+  
   &__content-container {
     display: flex;
     flex-direction: row;
@@ -20,8 +22,15 @@
         align-items: center;
         cursor: pointer;
 
+        &--right {
+          height: 100%;
+          display: flex;
+          align-items: flex-end;
+        }
+
         &__right {
           margin-left: $spacing_0_8;
+          margin-bottom: $spacing_1_2;
           @media screen and (min-width: screen_md) {
             margin-left: $spacing_2_4;
           }
@@ -45,9 +54,12 @@
 
     &__chart-wrapper {
       margin-top: $spacing_1_6;
-      padding: $spacing_0_8 0;
       height: 28rem;
       cursor: pointer;
+
+      @media screen and (min-width: $screen-lg) {
+        height: 50rem;
+      }
 
       &__dates {
         display: flex;
@@ -63,14 +75,10 @@
     align-items: center;
     min-height: 4rem;
     justify-content: center;
-  }
 
-  &__information-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 24rem;
-    padding-bottom: $spacing_3_2;
+    @media screen and (min-width: $screen-lg) {
+      height: 10rem;
+    }
   }
 
   &__icon-container {
