--- a/src/blocks/MyQA/my-qa.scss
+++ b/src/blocks/MyQA/my-qa.scss
@@ -29,24 +29,15 @@
     justify-items: stretch;
 
     &__search-container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-
-      @media screen and (min-width: $screen-md) {
-        flex-direction: row;
-      }
-      @media screen and (min-width: $screen-lg) {
-        flex-direction: row;
-        // justify-content: flex-start;
+      &__tabs {
+        display: flex;
       }
 
-      &__input {
-        margin-bottom: $spacing_1_6;
-        @media screen and (min-width: $screen-md) {
-          margin-right: $spacing_1_6;
-          margin-bottom: 0;
+      &__dropdown {
+        max-width: 35rem;
+        @media screen and (min-width: $screen-lg) {
+          margin-left: auto;
+          margin-right: 0;
         }
       }
     }
@@ -111,9 +102,6 @@
   }
 
   &__answers-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     padding-bottom: $spacing_4_6;
 
     &__no-questions {
