--- a/src/pages/InformationPortal/information-portal.scss
+++ b/src/pages/InformationPortal/information-portal.scss
@@ -3,6 +3,10 @@
 
 .page__information-portal {
   min-width: 40.7rem;
+  .theme-dark &,
+  .theme-highContrast & {
+    background-color: #193246;
+  }
 
   &__tabs-container {
     margin-top: $spacing_6_0;
