--- a/src/blocks/BaselineAssesment/baseline-assesment.scss
+++ b/src/blocks/BaselineAssesment/baseline-assesment.scss
@@ -8,7 +8,7 @@
     text-align: center;
     // max-width: 64rem;
     margin: 0 auto;
-    padding: 0 $spacing_1_6;
+    padding: 0 $spacing_1_6 $spacing_3_2;
   }
 
   // Intro section
