--- a/src/blocks/DashboardHero/dashboard-hero.scss
+++ b/src/blocks/DashboardHero/dashboard-hero.scss
@@ -1,14 +1,54 @@
 @import "@USupport-components-library/styles";
 
 .dashboard-hero {
-  padding-top: $spacing_5_6;
-  padding-bottom: $spacing_5_6;
+  padding-top: $spacing_10_0;
+  padding-bottom: $spacing_4_0;
+
+  &__content {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    @media screen and (max-width: 768px) {
+      flex-direction: column;
+      align-items: flex-start;
+    }
+  }
+
+  &__heading-row {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
 
   &__heading {
     text-align: left;
 
     &__name {
       @include themify($themes, "color", "color_6a4ffb_8c90eb");
+    }
+  }
+
+  &__mascot-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: $spacing_1_2;
+    width: 100%;
+
+    @media screen and (min-width: $screen-md) {
+      width: auto;
+    }
+  }
+
+  &__mascot {
+    object-fit: contain;
+    max-height: 16rem;
+    margin: $spacing_2_4 auto;
+
+    @media screen and (min-width: $screen-md) {
+      max-height: 20rem;
+      margin: 0 0 0 auto;
     }
   }
 }
