--- a/src/blocks/MoodTracker/mood-tracker.scss
+++ b/src/blocks/MoodTracker/mood-tracker.scss
@@ -16,7 +16,13 @@
   &__additional-comment {
     display: flex;
     flex-direction: column;
-    margin: $spacing_1_8 0;
+    margin: $spacing_1_8;
+
+    max-width: 53rem;
+
+    @media screen and (min-width: $screen_md) {
+      margin: 0 auto;
+    }
 
     &__toggle-container {
       display: flex;
@@ -49,11 +55,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    max-width: 35rem;
     margin-top: $spacing_1_2;
 
     @media screen and (min-width: $screen_md) {
       max-width: 60rem;
+      margin: 0 auto;
     }
 
     &__emoticon-container {
@@ -62,7 +68,7 @@
       cursor: pointer;
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: flex-center;
       justify-content: flex-start;
 
       @media screen and (min-width: $screen_md) {
