--- a/src/blocks/Organizations/organizations.scss
+++ b/src/blocks/Organizations/organizations.scss
@@ -8,7 +8,11 @@
     justify-content: space-between;
     align-items: center;
     padding-top: $spacing_2_4;
-    row-gap: $spacing_1_2;
+    gap: $spacing_1_2;
+
+    &__input {
+      max-width: 48rem;
+    }
 
     &__reset-filters-btn {
       display: none;
@@ -37,22 +41,10 @@
     padding-block: $spacing_2_4;
   }
 
-  &__specialisations-container {
-    width: 100%;
-    padding-bottom: $spacing_2_4;
-  }
-
-  &__specialisations-select {
-    width: 100%;
-
-    .select-container {
-      width: 100%;
-    }
-  }
-
   &__grid {
     padding-block: $spacing_2_4;
     justify-items: center;
+    gap: $spacing_2_6;
   }
 
   &__reset-filters-btn {
