--- a/src/blocks/Page/page.scss
+++ b/src/blocks/Page/page.scss
@@ -4,6 +4,14 @@
   padding-top: $spacing_6_6;
   @include themify($themes, "background-color", "color_white_ff");
   min-width: 34rem;
+  background-image: url("./assets/mobile-hero.png");
+  background-size: 100% auto;
+  background-position: top center;
+  background-repeat: no-repeat;
+
+  @media screen and (min-width: 768px) {
+    background-image: url("./assets/hero.png");
+  }
 
   &--no-additional-top-padding {
     padding-top: 0;
@@ -26,12 +34,7 @@
   }
 
   &__header {
-    align-items: center;
-    justify-content: space-between;
-    display: flex;
-    flex: 1;
     padding: $spacing_3_2 $spacing_1_6 $spacing_1_6 $spacing_1_6;
-    min-width: calc(38rem - ($spacing_1_6 + $spacing_1_6));
 
     @media screen and (min-width: $screen-md) {
       padding-top: $spacing_5_0;
