--- a/src/blocks/SOSCenter/sos-center.scss
+++ b/src/blocks/SOSCenter/sos-center.scss
@@ -67,7 +67,7 @@
         margin-bottom: 2rem;
         text-align: left;
 
-        & .btn {
+        & .button {
           margin-left: 2rem;
         }
       }
