Refactor: update button components in SelectProvider for consistency and improved styling

--- a/src/pages/SelectProvider/select-provider.scss
+++ b/src/pages/SelectProvider/select-provider.scss
@@ -10,7 +10,7 @@
     padding-top: $spacing_2_0;
     width: 100%;
 
-    & .btn:first-of-type {
+    & .button:first-of-type {
       margin-inline: auto;
       @media screen and (min-width: $screen_md) {
         margin-right: $spacing_1_2;
