Refactor: update ActivityHistory component structure and styles for improved layout and responsiveness

--- a/src/blocks/Page/page.scss
+++ b/src/blocks/Page/page.scss
@@ -13,6 +13,11 @@
     background-image: url("./assets/hero.png");
   }
 
+  .theme-dark &,
+  .theme-highContrast & {
+    background-image: none;
+  }
+
   &--no-additional-top-padding {
     padding-top: 0;
   }
