--- a/src/blocks/ActivityHistory/activity-history.scss
+++ b/src/blocks/ActivityHistory/activity-history.scss
@@ -1,23 +1,18 @@
 @import "@USupport-components-library/styles";
 
 .activity-history {
-  @include full-height-page-navbar;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  min-height: 0;
+  overflow: hidden;
 
-  &__header-block {
-    @include themify($themes, "background-color", "color_white_ff");
-    left: 0;
-    padding: $spacing_2_0;
-    padding-bottom: 0;
-    position: fixed;
-    right: 0;
-    z-index: $z_index_2;
+  &__header {
+    flex: 0 0 auto;
+    padding: $spacing_1_6 $spacing_2_0;
 
     @media screen and (min-width: $screen-md) {
-      top: $spacing_6_6;
-    }
-
-    @media screen and (min-width: 1100px) {
-      padding-top: $spacing_3_6;
+      padding: $spacing_2_0 $spacing_3_6;
     }
 
     &__provider-container {
@@ -39,32 +34,21 @@
         margin-right: $spacing_1_6;
       }
     }
-  }
-
-  &__main {
-    padding-top: 24.5rem;
-
-    @media screen and (min-width: $screen_md) {
-      padding-top: $spacing_20_0;
-    }
 
     &__controls {
       margin: 0 auto;
-      padding: $spacing_1_8;
-      padding-top: 0;
+      padding-top: $spacing_1_2;
       max-width: 34rem;
-      z-index: 5;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
       justify-content: flex-start;
 
-      @media screen and (min-width: $screen_md) {
+      @media screen and (min-width: $screen-md) {
         align-items: center;
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
-        margin-top: $spacing_1_8;
         max-width: 100%;
       }
 
@@ -73,9 +57,9 @@
         flex-direction: row;
         align-items: center;
         justify-content: flex-start;
-        margin-top: $spacing_1_8;
+        margin-top: $spacing_1_2;
 
-        @media screen and (min-width: $screen_md) {
+        @media screen and (min-width: $screen-md) {
           margin-right: $spacing_1_2;
         }
 
@@ -83,58 +67,35 @@
           margin-left: $spacing_1_2;
         }
       }
+
+      &__search {
+        margin-top: $spacing_1_2;
+        width: 100%;
+        max-width: 30rem;
+
+        @media screen and (min-width: $screen-md) {
+          margin-right: $spacing_2_0;
+          max-width: 34rem;
+        }
+      }
+
       &__export-button {
-        margin-top: $spacing_1_8;
-      }
-    }
-
-    &__search {
-      margin: 0 auto;
-      margin-top: $spacing_1_8;
-      width: 30rem;
-
-      @media screen and (min-width: $screen_md) {
-        margin: unset;
-        margin-right: $spacing_2_0;
-        width: 34rem;
+        margin-top: $spacing_1_2;
       }
     }
   }
 
-  &__main {
-    &__button-container {
-      padding: $spacing_2_0 0;
-      padding-bottom: calc(10vh);
-      position: sticky;
-      bottom: 0;
-      // background: $gradient_transparent;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      z-index: $z_index_emergency_button;
-    }
-  }
-
-  &__main__content {
+  &__messages {
+    flex: 1 1 auto;
+    min-height: 0;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
-    width: 100%;
-    align-items: center;
-    height: 52vh;
-    overflow: auto;
+    padding: 0 $spacing_2_0;
 
-    @media screen and (min-width: $screen_md) {
-      height: 61vh;
+    @media screen and (min-width: $screen-md) {
+      padding: 0 $spacing_3_6;
     }
-  }
-
-  &__main__messages-container {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    width: 100%;
-    overflow: auto;
 
     &::-webkit-scrollbar {
       width: 0.4rem;
@@ -145,13 +106,16 @@
       background: rgba(217, 217, 217, 0.63);
       border-radius: 0.3rem;
     }
+
     &::-webkit-scrollbar-thumb {
       background-color: $color_primary_20809e;
       border-radius: 0.3rem;
     }
 
-    @media screen and (min-width: $screen_md) {
+    @media screen and (min-width: $screen-md) {
       max-width: 75rem;
+      align-self: center;
+      width: 100%;
     }
 
     &__no-messages {
@@ -171,11 +135,20 @@
       margin-top: $spacing_1_6;
     }
 
-    @media screen and (min-width: $screen_md) {
+    @media screen and (min-width: $screen-md) {
       & .message,
       & .system-message {
         margin-top: $spacing_2_4;
       }
     }
+  }
+
+  &__footer {
+    flex: 0 0 auto;
+    padding: $spacing_1_6 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
   }
 }
