--- a/src/backdrops/Welcome/welcome.scss
+++ b/src/backdrops/Welcome/welcome.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-bottom: $spacing_4_0;
+    padding-bottom: $spacing_2_0;
     gap: $spacing_2_4;
 
     &__logo {
@@ -16,6 +16,50 @@
 
     &__dropdown {
       width: 100%;
+    }
+
+    &__buttons-container {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      gap: $spacing_1_6;
+    }
+
+    &__buttons-row {
+      display: flex;
+      gap: $spacing_2_0;
+      width: 100%;
+      margin-top: $spacing_0_8;
+
+      & > button,
+      & > .button {
+        flex: 1 1 0;
+        min-width: 0;
+      }
+    }
+
+    &__login-text {
+      font-size: 18px;
+      color: #373737;
+      text-align: center;
+      border-bottom: 1px solid #e0e0e0;
+      width: 100%;
+      padding-bottom: $spacing_1_6;
+
+      &--disabled {
+        opacity: 0.45;
+        pointer-events: none;
+      }
+    }
+
+    &__login-link {
+      color: #9749fa;
+      font-weight: 600;
+      cursor: pointer;
+
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
 }
