--- a/src/blocks/MoodTrackHistory/mood-track-history.scss
+++ b/src/blocks/MoodTrackHistory/mood-track-history.scss
@@ -3,6 +3,12 @@
 .mood-track-history {
   padding-bottom: $spacing_3_2;
 
+  &__year-dropdown {
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+  }
+
   &__content-container {
     display: flex;
     flex-direction: row;
