--- a/src/backdrops/RegisterAnonymous/register-anonymous.scss
+++ b/src/backdrops/RegisterAnonymous/register-anonymous.scss
@@ -6,5 +6,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: $spacing_2_4;
+    gap: $spacing_2_4;
   }
 }
